# subgraph_matching

./: CMakeLists.txt  README.md  common.h  cpumine.cpp  genDatabase.cpp  main.cpp  main_singleV.cpp  miningPattern.cu  variableInfo.txt
datasets/: datasets_infor.md
final_result/: DVPhaseCal.csv  DV_SV_catagory.csv  Large_GSI_Orkut.csv  Large_Orkut.csv  Large_SingleV_Orkut.csv  Large_SingleV_sinaweibo.csv  Large_sinaweibo.csv  Medium_GSI_Patents.csv  Medium_GSI_REDDIT-MULTI-12K.csv  Medium_Patents.csv  Medium_REDDIT-MULTI-12K.csv  Medium_SingleV_Patents.csv  Medium_SingleV_REDDIT-MULTI-12K.csv  README.md  ReadData.py  Small_DD.csv  Small_GSI_DD.csv  Small_GSI_Gowalla.csv  Small_Gowalla.csv  Small_SingleV_DD.csv  Small_SingleV_Gowalla.csv  Tiny_Enron.csv  Tiny_FIRSTMM-DB.csv  Tiny_GSI_Enron.csv  Tiny_GSI_FIRSTMM-DB.csv  Tiny_SingleV_Enron.csv  Tiny_SingleV_FIRSTMM-DB.csv  overperformance.eps
result/: README.md  result_DD.csv  result_DD.md  result_DD_GSI.csv  result_DD_GSI.md  result_Enron.csv  result_Enron.md  result_Enron_GSI.csv  result_Enron_GSI.md  result_FIRSTMM-DB.csv  result_FIRSTMM-DB.md  result_FIRSTMM-DB_GSI.csv  result_FIRSTMM-DB_GSI.md  result_Gowalla.csv  result_Gowalla.md  result_Gowalla_GSI.csv  result_Gowalla_GSI.md  result_LiveJournal.csv  result_LiveJournal.md  result_Patents.csv  result_Patents.md  result_Patents_GSI.csv  result_Patents_GSI.md  result_REDDIT-MULTI-12K.csv  result_REDDIT-MULTI-12K.md  result_REDDIT-MULTI-12K_GSI.csv  result_REDDIT-MULTI-12K_GSI.md  result_Wiki-Vote.csv  result_Wiki-Vote_GSI.csv  result_Wiki-Vote_GSI.md  (+1 more)
(+30 files in other folders)
